manifests/kubernetes/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"app-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"test.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"my-app-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["test.isfpdomain.com"],"secretName":"auth-tls- [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-30T09:38:54Z"
    generation: 1
    name: app-ingress
    namespace: monitoring
    resourceVersion: "179165459"
    uid: 2e1c7829-193c-4008-82a9-c9540dd8af07
  spec:
    ingressClassName: nginx
    rules:
    - host: test.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: my-app-service
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - test.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"collector-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"collector.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"otel-collector-opentelemetry-collector","port":{"number":4318}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["collecto [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-30T09:50:00Z"
    generation: 2
    name: collector-ingress
    namespace: monitoring
    resourceVersion: "179165464"
    uid: 7d2f1e64-2aed-40f8-98db-228ffaa516e1
  spec:
    ingressClassName: nginx
    rules:
    - host: collector.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: otel-collector-opentelemetry-collector
              port:
                number: 4318
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - collector.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"grafana2-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"grafana2.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"grafana","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["grafana2.isfpdomain.com"],"secretName":"aut [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-23T09:47:24Z"
    generation: 1
    name: grafana2-ingress
    namespace: monitoring
    resourceVersion: "179165442"
    uid: 87c4ccc5-c8ea-48b3-bb41-d0cc23855f3c
  spec:
    ingressClassName: nginx
    rules:
    - host: grafana2.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: grafana
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - grafana2.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/proxy-body-size":"100m","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"loki-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"loki.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"loki-gateway","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"ho [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/proxy-body-size: 100m
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-30T09:18:35Z"
    generation: 1
    name: loki-ingress
    namespace: monitoring
    resourceVersion: "179165452"
    uid: 883acf7c-cff1-42cf-9e7d-52cabebb16ba
  spec:
    ingressClassName: nginx
    rules:
    - host: loki.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: loki-gateway
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - loki.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"prometheus-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"prometheus2.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"prometheus-server","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["prometheus2.isfpdomain.com"] [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-23T09:02:45Z"
    generation: 6
    name: prometheus-ingress
    namespace: monitoring
    resourceVersion: "179165454"
    uid: 5f1c2e6a-ff22-4b49-96d9-96be5f01b279
  spec:
    ingressClassName: nginx
    rules:
    - host: prometheus2.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: prometheus-server
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - prometheus2.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/backend-protocol":"HTTP","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"zipkin-ingress","namespace":"monitoring"},"spec":{"ingressClassName":"nginx","rules":[{"host":"zipikin.isfpdomain.com","http":{"paths":[{"backend":{"service":{"name":"zipkin","port":{"number":9411}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["zipikin.isfpdomain.com"],"secretName":"auth-t [...]
      nginx.ingress.kubernetes.io/backend-protocol: HTTP
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2025-06-30T09:18:22Z"
    generation: 2
    name: zipkin-ingress
    namespace: monitoring
    resourceVersion: "179165445"
    uid: 29f4ebad-bf5b-4eca-bd1f-8d9a866d5884
  spec:
    ingressClassName: nginx
    rules:
    - host: zipikin.isfpdomain.com
      http:
        paths:
        - backend:
            service:
              name: zipkin
              port:
                number: 9411
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - zipikin.isfpdomain.com
      secretName: auth-tls-secret
  status:
    loadBalancer:
      ingress:
      - ip: 10.9.100.68
kind: List
metadata:
  resourceVersion: ""
